xraylib/Acq.h

/** 
* AcquisitionDesc defines a data structure that is 
* used by all functions of XISL. It contains all 
* required parameters for the acquisition.
* Access to the data fields is only possible via 
* the XISL API functions. HACQDESC defines a HANLDE to the acquisition descriptor.
* @see AcquisitionDesc
* @ingroup enum
**/
typedef HANDLE HACQDESC;
    #define HIS_RETURN _DLL_API UINT WINAPI
// 128Byte in total
typedef struct
{	
	char	cDetectorType[32];															// e.g. XRD 0822 AO 14
	char	cManufacturingDate[8];														// e.g. 201012
	char	cPlaceOfManufacture[8];														// e.g. DE
    char    cUniqueDeviceIdentifier[16];
    char    cDeviceIdentifier[16];
	char	cDummy[48];
} GBIF_Detector_Properties;
/**
* @ingroup enum
*/
typedef enum
{
	LEVEL_TRACE = 0,
	LEVEL_DEBUG,
	LEVEL_INFO,
	LEVEL_WARN,
	LEVEL_ERROR,
	LEVEL_FATAL,
	LEVEL_ALL,
	LEVEL_NONE
} XislLoggingLevels;
/**
* @ingroup enum
*/
typedef enum OnboardBinningMode
{
	ONBOARDBINNING2x1 = 0,
	ONBOARDBINNING2x2 = 1,
	ONBOARDBINNING4x1 = 2,
	ONBOARDBINNING4x4 = 3,
	ONBOARDBINNING3x3 = 4,
	ONBOARDBINNING9to4 = 5
} OnboardBinningMode;
/**
* @ingroup enum
*/
typedef enum XIS_DetectorTriggerMode
{
	TRIGGERMODE_DDD,
	TRIGGERMODE_DDD_WO_CLEARANCE,
	TRIGGERMODE_STARTSTOP,
	TRIGGERMODE_FRAMEWISE,
	TRIGGERMODE_AED,
	TRIGGERMODE_ROWTAG,
	TRIGGERMODE_DDD_POST_OFFSET,
	TRIGGERMODE_DDD_DUAL_POST_OFFSET
}XIS_DetectorTriggerMode;
/**
* @ingroup enum
*/
typedef enum XIS_FileType
{
	PKI_RESERVED = 1,
	PKI_DOUBLE = 2,
	PKI_SHORT = 4,
	PKI_SIGNED = 8,
	PKI_ERRORMAPONBOARD = 16,
	PKI_LONG = 32,
	PKI_SIGNEDSHORT = PKI_SHORT | PKI_SIGNED,
	PKI_SIGNEDLONG = PKI_LONG | PKI_SIGNED,
	PKI_FAULTMASK = PKI_LONG | PKI_RESERVED
} XIS_FileType;
/**
* @ingroup enum
*/
typedef enum XIS_Event
{
   XE_ACQUISITION_EVENT = 0x00000001,
   XE_SENSOR_EVENT      = 0x00000002,
   XE_SDCARD_EVENT      = 0x00000004,
   XE_BATTERY_EVENT     = 0x00000005,
   XE_LOCATION_EVENT    = 0x00000006,
   XE_NETWORK_EVENT     = 0x00000007,
   XE_DETECTOR_EVENT    = 0x00000008,
   XE_LIBRARY_EVENT     = 0x00000009,
   XE_SDCARD_FSCK_EVENT = 0x0000000A,
} XIS_Event;
typedef void (*XIS_EventCallback)(XIS_Event, UINT, UINT, void *, void *);
HIS_RETURN Acquisition_SetCallbacksAndMessages(HACQDESC pAcqDesc,
					  HWND hWnd,
					  UINT dwErrorMsg, UINT dwLoosingFramesMsg,
					  void (CALLBACK *lpfnEndFrameCallback)(HACQDESC), 
					  void (CALLBACK *lpfnEndAcqCallback)(HACQDESC)
					  );
HIS_RETURN Acquisition_GetVersion(int * major, int * minor, int * release, int * build);
HIS_RETURN Acquisition_GetProvidedEnhancedFeatures(HACQDESC hAcqDesc, unsigned int* uiEnhancesFeatures);
HIS_RETURN Acquisition_Set_OnboardOptionPreview(HACQDESC hAcqDesc, BOOL bEnablePreview, BOOL bPreviewOptionSendFull, OnboardBinningMode eMode, unsigned int uiSelectedScript);
HIS_RETURN Acquisition_IsPreviewImage(HACQDESC hAcqDesc, unsigned int* uiIsPreview);
HIS_RETURN Acquisition_SetPhototimedParams(HACQDESC hAcqDesc, unsigned short usNrOfScrubs, unsigned short usMaxDelay);
HIS_RETURN Acquisition_EnableLogging(BOOL onOff);
HIS_RETURN Acquisition_SetLogLevel(XislLoggingLevels xislLogLvl);
HIS_RETURN Acquisition_GetLogLevel(XislLoggingLevels *xislLogLvl);
HIS_RETURN Acquisition_TogglePerformanceLogging(BOOL onOff);
HIS_RETURN Acquisition_SetLogOutput(const char* filePath, BOOL consoleOnOff);
HIS_RETURN Acquisition_SetFileLogging(const char* filename, BOOL enableLogging);
HIS_RETURN Acquisition_SetConsoleLogging(BOOL enableConsole);
HIS_RETURN Acquisition_GetXISFileBufferSize(size_t* pFileSize, UINT dwRows, UINT dwColumns, UINT dwFrames, BOOL uiOnboardFileHeader,XIS_FileType filetype);
HIS_RETURN Acquisition_CreateOnboardPixelMaskFrom16BitPixelMask(unsigned short* uspPixelMaskSrc, DWORD dwRows, DWORD dwColumns, unsigned char* bpOnboardPixelMask);
HIS_RETURN Acquisition_CreateXISFileInMemory(void* pMemoryFileBuffer, void*pDataBuffer, UINT dwRows, UINT dwColumns, UINT dwFrames, BOOL uiOnboardFileHeader, XIS_FileType filetype);
HIS_RETURN Acquisition_SaveFile(const char *filename, void* pImageBuffer, UINT dwRows, UINT dwColumns, UINT dwFrames , BOOL uiOnboardFileHeader, XIS_FileType usTypeOfNumbers);
HIS_RETURN Acquisition_SaveRawData(const char *filename, const unsigned char *buffer, size_t bufferSize);
HIS_RETURN Acquisition_LoadXISFileToMemory(const char *filename, void* pMemoryFileBuffer, size_t bufferSize);
HIS_RETURN Acquisition_SetDACOffsetFloorValueByMode(HACQDESC hAcqDesc, unsigned int uiMode);
HIS_RETURN Acquisition_SetDACOffsetFloorValueInFlash(HACQDESC hAcqDesc, unsigned int uiMode, WORD wValue);
HIS_RETURN Acquisition_GetDACOffsetFloorValueFromFlash(HACQDESC hAcqDesc, unsigned int uiMode, WORD* pwValue);
HIS_RETURN Acquisition_GetDetectorProperties(HACQDESC hAcqDesc, GBIF_Detector_Properties* pDetectorProperties);
HIS_RETURN Acquisition_SetDACoffset(HACQDESC hAcqDesc, WORD wDACoffsetValue);
HIS_RETURN Acquisition_SetDACoffsetBinningFPS(HACQDESC hAcqDesc, WORD wBinningMode, double dblFps, WORD *pwValueToFPGA);
HIS_RETURN Acquisition_Enable_EMI_Data_Readout(HACQDESC hAcqDesc, unsigned int uiOnOff);
HIS_RETURN Acquisition_GetGridSensorStatus(HACQDESC hAcqDesc, unsigned int *uiStatus);
HIS_RETURN Acquisition_GetConnectionStatus(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_Set_FPGA_Power_Mode(HACQDESC hAcqDesc, unsigned int uiMode);
HIS_RETURN Acquisition_SetTailTimeforTriggerMode(HACQDESC hAcqDesc, unsigned short usTailTime, XIS_DetectorTriggerMode eTriggerMode);
HIS_RETURN Acquisition_SetEventCallback(HACQDESC hAcqDesc, XIS_EventCallback EventCallback, void *userData);
HIS_RETURN Acquisition_DisableEventCallback(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_ResetOnboardShockEvent(HACQDESC hAcqDesc, unsigned int latestShock_Timestamp);
HIS_RETURN Acquisition_SetSDCardForceFsck(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_AckSDCardForceFsck(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_AckSDCardForceFsckError(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_VerifyGenuineness(HACQDESC hAcqDesc, char (*msg)[128], size_t *msg_len, unsigned char (*md)[20]);
HIS_RETURN Acquisition_SetPrivateKey(HACQDESC hAcqDesc, unsigned char (*key_old)[64], unsigned char (*key_new)[64]);