xraylib/Acq.cs


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetVersion(int* major, int* minor, int* release, int* build);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetProvidedEnhancedFeatures(IntPtr hAcqDesc, unsigned int* uiEnhancesFeatures);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Set_OnboardOptionPreview(IntPtr hAcqDesc, bool bEnablePreview, bool bPreviewOptionSendFull, OnboardBinningMode eMode, unsigned int uiSelectedScript);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_IsPreviewImage(IntPtr hAcqDesc, unsigned int* uiIsPreview);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetPhototimedParams(IntPtr hAcqDesc, unsigned short usNrOfScrubs, unsigned short usMaxDelay);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_EnableLogging(bool onOff);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetLogLevel(XislLoggingLevels xislLogLvl);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetLogLevel(XislLoggingLevels* xislLogLvl);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_TogglePerformanceLogging(bool onOff);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetLogOutput(const char* filePath, bool consoleOnOff);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetFileLogging(const char* filename, bool enableLogging);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetConsoleLogging(bool enableConsole);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetXISFileBufferSize(size_t* pFileSize, uint dwRows, uint dwColumns, uint dwFrames, bool uiOnboardFileHeader, XIS_FileType filetype);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_CreateOnboardPixelMaskFrom16BitPixelMask(unsigned short* uspPixelMaskSrc, uint dwRows, uint dwColumns, byte* bpOnboardPixelMask);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_CreateXISFileInMemory(void* pMemoryFileBuffer, void* pDataBuffer, uint dwRows, uint dwColumns, uint dwFrames, bool uiOnboardFileHeader, XIS_FileType filetype);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SaveFile(const char* filename, void* pImageBuffer, uint dwRows, uint dwColumns, uint dwFrames, bool uiOnboardFileHeader, XIS_FileType usTypeOfNumbers);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SaveRawData(const char* filename, const byte* buffer, size_t bufferSize);
        //[DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_LoadXISFileToMemory(const char* filename, void* pMemoryFileBuffer, size_t bufferSize);

        //[DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetDACOffsetFloorValueByMode(IntPtr hAcqDesc, unsigned int uiMode);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetDACOffsetFloorValueInFlash(IntPtr hAcqDesc, unsigned int uiMode, ushort wValue);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetDACOffsetFloorValueFromFlash(IntPtr hAcqDesc, unsigned int uiMode, ushort* pwValue);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetDetectorProperties(IntPtr hAcqDesc, GBIF_Detector_Properties* pDetectorProperties);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetDACoffset(IntPtr hAcqDesc, ushort wDACoffsetValue);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetDACoffsetBinningFPS(IntPtr hAcqDesc, ushort wBinningMode, double dblFps, ushort* pwValueToFPGA);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Enable_EMI_Data_Readout(IntPtr hAcqDesc, unsigned int uiOnOff);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetGridSensorStatus(IntPtr hAcqDesc, unsigned int* uiStatus);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetConnectionStatus(IntPtr hAcqDesc);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Set_FPGA_Power_Mode(IntPtr hAcqDesc, unsigned int uiMode);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetTailTimeforTriggerMode(IntPtr hAcqDesc, unsigned short usTailTime, XIS_DetectorTriggerMode eTriggerMode);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetEventCallback(IntPtr hAcqDesc, XIS_EventCallback EventCallback, void* userData);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_DisableEventCallback(IntPtr hAcqDesc);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_ResetOnboardShockEvent(IntPtr hAcqDesc, unsigned int latestShock_Timestamp);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetSDCardForceFsck(IntPtr hAcqDesc);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_AckSDCardForceFsck(IntPtr hAcqDesc);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_AckSDCardForceFsckError(IntPtr hAcqDesc);
